--- a/NMPC/CMakeLists.txt
+++ b/NMPC/CMakeLists.txt
@@ -8,5 +8,7 @@ find_package(PythonLibs 2.7 REQUIRED)
 include_directories(${PYTHON_INCLUDE_DIRS})
 include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
 
-add_executable(nmpc nmpc.cpp)
-target_link_libraries(nmpc ${PYTHON_LIBRARIES})
+#add_executable(nmpc nmpc.cpp)
+add_executable(nmpc_two_wheel nmpc_two_wheel.cpp)
+#target_link_libraries(nmpc ${PYTHON_LIBRARIES})
+target_link_libraries(nmpc_two_wheel ${PYTHON_LIBRARIES})
